fix spacing due to larger grid

--- a/src/pages/ConnectionsPage.css
+++ b/src/pages/ConnectionsPage.css
@@ -435,11 +435,13 @@ h1 {
 
   .connections-game {
     position: relative;
-    max-width: 400px;
+    max-width: 100vw;
     margin: 0 auto;
     padding:  5.2356020942408374vw;
     text-align: center;
     overflow-x: auto;
+    max-height: 100vh;
+    overflow-y: auto;
   }
   
   h1 {
@@ -461,8 +463,8 @@ h1 {
     background: #cccccc;
     border: 1px solid #ddd;
     padding: 10px; 
-    width: 85px; 
-    height: 85px; 
+    height: 100%;
+    width: 100%;
     display: flex; 
     justify-content: center;
     align-items: center;
@@ -737,9 +739,10 @@ h1 {
     justify-content: space-between;
     align-items: center;
     margin-left: 10px;
+    margin-top: -.9vh;
   }
   .game-button {
-    margin-top: 60px;
+    margin-top: 1vh;
   }
   .group-description {
     bottom: 6.625vh;
@@ -758,11 +761,12 @@ h1 {
   .terms-grid {
     gap: 1vh;
     width: 100%;
+    margin-bottom: 7.5vh;
   }
   .term-block {
     aspect-ratio: 1 / 1;
-    height: 10.30vh;
-    width: 10.30vh;
+    height: 105%;
+    width: 105%;
   }
   .guessed-group-combined {
     color: white;
@@ -772,6 +776,12 @@ h1 {
     padding: 1vh;
     margin-bottom: 1vh;
     border-radius: .4vh;
+  }
+  .mistakes-section {
+    font-size: 1.95vh;
+  }
+  .baseball-icon {
+    width: 2.4vh;
   }
   .group-images {
     height: 100%;
@@ -811,19 +821,25 @@ h1 {
   .game-button {
     margin-top: 60px;
   }
+  .mistakes-section {
+    font-size: 1.95vh;
+  }
+  .baseball-icon {
+    width: 2.3vh;
+  }
   .group-description {
     bottom: 6.025vh;
     font-size: 1.5vh;
   }
   .terms-grid {
     gap: 1vh;
-    margin-bottom: 2.9vh;
+    margin-bottom: 8.4vh;
     width: 100%;
   }
   .term-block {
     aspect-ratio: 1 / 1;
-    height: 10.10vh;
-    width: 10.10vh;
+    height: 106%;
+    width: 106%;
   }
   .guessed-group-combined {
     color: white;
@@ -868,7 +884,7 @@ h1 {
 
 @media (max-height: 800px) and (min-width: 601px) {
   .connections-game {
-    width: 70vh;
+    width: 100vw;
     position: relative;
     margin: 0 auto;
     padding: 2.5380710659898478vh;
@@ -889,8 +905,8 @@ h1 {
   
   .term-block {
     aspect-ratio: 1 / 1;
-    height: 16vh;
-    width: 16vh;
+    height: 100%;
+    width: 100%;
   }
 
   .text-overlay {
@@ -1196,8 +1212,8 @@ h1 {
   }
   
   .term-block {
-    height: 15vh;
-    width: 15vh;
+    height: 100%;
+    width: 100%;
   }
   
   .group-description {
@@ -1241,29 +1257,30 @@ h1 {
     position: relative;
     text-align: center;
     width: 100vw;
-    max-width: 100%;
+    max-width: 115%;
     margin: 0 auto;
     box-sizing: border-box;
-    overflow-x: auto;
+    max-height: 100vh;
+    overflow-y: auto;
   }
   
   h1 {
     font-size: 2.445685279187817vh;
-    margin-top: -2.95380710659898478vh;
+    margin-top: -3.95380710659898478vh;
     width: 100%;
-    margin-bottom: 3.5380710659898478vh;
+    margin-bottom: 1.5380710659898478vh;
   }
   
   .terms-grid {
     gap: 1vh;
-    margin-bottom: 2.9vh;
+    margin-bottom: 6.6vh;
     width: 100%;
   }
   
   .term-block {
     aspect-ratio: 1 / 1;
-    height: 12.69vh;
-    width: 12.69vh;
+    height: 103%;
+    width: 103%;
   }
   
   .term-block.selected {
@@ -1419,5 +1436,13 @@ h1 {
     margin: 0 auto;
     box-sizing: border-box;
     overflow-x: auto;
+  }
+}
+
+
+@media (min-height: 599px) and (min-width: 1000px) {
+  .connections-game {
+    max-height: 80vh;
+    overflow-y: auto;
   }
 }
